--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.12-slim
+FROM mcr.microsoft.com/playwright/python:v1.44.0-jammy
 
 WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
+RUN playwright install --with-deps
 COPY . .
 
 EXPOSE 8050
