--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -73,7 +73,7 @@ opentelemetry-semantic-conventions==0.57b0
 orjson==3.11.2
 overrides==7.7.0
 packaging==25.0
-playwright==1.54.0
+playwright
 posthog==5.4.0
 propcache==0.3.2
 protobuf==6.32.0
